# txtrtool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copylibs.sh  delcfg.sh  package.sh  test_decode.sh  test_encode.sh  test_print.sh
cmake/: txtrtool_any.cmake  txtrtool_clang.cmake  txtrtool_gcc.cmake
include/: txtrtool.h
include/configure/: txtrtool_settings.h  txtrtool_settings.h.in  txtrtool_version.h  txtrtool_version.h.in
src/: txtrtool.c
